--- a/frontend/.env
+++ b/frontend/.env
@@ -1,13 +1,16 @@
 # Backend API Configuration
-REACT_APP_BACKEND_URL=https://fix-render-loop.preview.emergentagent.com
-WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=http://localhost:8000
+WDS_SOCKET_PORT=3000
 
 # Google OAuth Configuration
-REACT_APP_GOOGLE_CLIENT_ID=your-google-oauth-client-id
+REACT_APP_GOOGLE_CLIENT_ID=71139855005-6glv73030pdfp85r9de83q2kqlht1u3v.apps.googleusercontent.com
+GEMINI_API_KEY="AIzaSyAP3N0jTzOMpLTRyy9d77Osq2gwpxZned4"
 
 # Cloudinary Configuration (for frontend uploads)
-REACT_APP_CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+REACT_APP_CLOUDINARY_CLOUD_NAME=dajosvpkx
 REACT_APP_CLOUDINARY_UPLOAD_PRESET=your-upload-preset
+CLOUDINARY_API_SECRET=2mgKvpMiIppfhNvC5MdW1OFnsu4
+CLOUDINARY_API_KEY=724527396877136
 
 # Application Configuration
 REACT_APP_APP_NAME=TalentD Platform
