--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,10 +23,7 @@ numpy>=1.26.0
 python-multipart>=0.0.9
 jq>=1.6.0
 typer>=0.9.0
-<<<<<<< HEAD
-emergentintegrations --extra-index-url https://d33sy5i8bnduwe.cloudfront.net/simple/
-=======
->>>>>>> 54e658b (changes made)
+google-generativeai>=0.3.0
 bcrypt>=4.0.1
 PyPDF2>=3.0.1
 python-docx>=1.1.0
